# vkengine

./: .dir-locals.el  .dir.locals.el  .editorconfig  .gitignore  CMakeLists.txt  Main.cpp  README.md  build.ps1  compile_commands.json  vcpkg.json
.cache/clangd/index/: App.cpp.AA04EDE9AF9B158A.idx  App.h.14B7DE0F5F9E3A06.idx  Device.cpp.3EDC9F34E0130B3E.idx  Device.h.7FE2D661085C368D.idx  Device.h.8B93D8E9450DCC67.idx  Main.cpp.FF783851AB02FB51.idx  Pipeline.cpp.150CE797DD91C696.idx  Pipeline.h.90A383E63128D7CF.idx  Renderer.cpp.BC5A559FF095C101.idx  Renderer.h.266A5F7A86CFCF8C.idx  Renderer.h.CC703A50A0A5D4B3.idx  ShaderBlob.h.EC2242CEBD65CFD8.idx  ShaderCommon.h.F3AA0B25C1352B19.idx  ShaderHandle.h.DC7043456A59CFD1.idx  ShaderKey.h.7E599340CD250FDD.idx  ShaderLoader.cpp.4D58AB7A24D86C9F.idx  ShaderLoader.cpp.50A96CCF8F808A62.idx  ShaderLoader.h.4434DF35CDD03AF2.idx  ShaderLoader.h.4BEF8FB19833FDF3.idx  ShaderLoader.h.C0F54F113B4A0754.idx  Swapchain.cpp.555B9F209F03F47C.idx  Swapchain.h.59234A738B7CBE23.idx  Swapchain.h.597BE139A30BBE97.idx  main.cpp.A9B8E14546AC6970.idx
Core/: Device.cpp  Renderer.cpp  Swapchain.cpp
Core/Backend/: Pipeline.cpp
Core/Shaders/: ShaderLoader.cpp
Include/Core/: Device.h  Renderer.h  Swapchain.h
Include/Core/Backend/: Pipeline.h
Include/Core/Shaders/: ShaderBlob.h  ShaderCommon.h  ShaderHandle.h  ShaderKey.h  ShaderLoader.h  ShaderModule.h
Include/Core/Utils/Hash/: Hash.h
